2004-05-31 Maarten Brock <sourceforge.brock AT dse.nl>
	* src/SDCCast.c (createIvalArray): fixed bug 770487 SIGSEGV
	* src/SDCCglue.c (emitRegularMap): fixed bug 770484 allocation problem
	* src/SDCCglue.c (initPointer, printIvalType, printIvalStruct,
	  printIvalArray, printIvalFuncPtr, printIvalPtr, printIval): fixed
	  bugs 928906 and 954082 half-empty initializers
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (getAllocSize): added for above fix
	* src/z80/gen.c (genArrayInit): fixed bug 741044
	* support/regression/tests/zeropad.c: added tests

2004-05-30 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.c (pic16_dump_section): corrected bug which
	caused some symbols of the libraries to be misplaced

2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c,
	* src/pic16/ralloc.h,
	* src/pic16/ralloc.cc: prefixed IS_CONFIG_ADDRESS with PIC16_
	to fix conflict with pic port

2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c (pic16emitStaticSeg): do not print as publics or
	externs configuration variables,
	* src/pic16/ralloc.h,
	* src/pic16/ralloc.cc: IS_CONFIG_ADDRESS is made public and added
	prototype in header, commented out some debug messages

2004-05-26 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c,
	* src/pic16/main.c,
	* src/pic16/pcode.c: added gpasm directives #FILE/#LINE
	for gpasm COFF object generation. Thanks to D. Hawkins for
	his patch info

2004-05-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/main.c,
	* src/mcs51/main.c: fixed sort order of mnemonics (thanks to Maarten
	Brock for spotting this)
	* src/ds390/gen.c (genEndFunction),
	* src/mcs51/gen.c (genEndFunction): always save psw if function is an
	interrupt handler and critical. Disable push/pop optimizations when
	peephole optimizations disabled.

2004-05-25 Vangelis Rokas <vrokas AT otenet.gr>

	Updated pic16 library sources and headers.
	* device/lib/pic16/pic18f*/ ,